Fixed visual bug for Chrome (top border was invisible)
https://coveord.atlassian.net/browse/JSUI-1477

--- a/sass/_FieldTable.scss
+++ b/sass/_FieldTable.scss
@@ -8,6 +8,7 @@
   padding-bottom: 10px;
   position: relative;
   word-break: break-all;
+  margin-top:1px;
   th, td {
     font-size: $font-size-smaller;
   }
